play-pit/CICD/Gitlab/GitLab-CE/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab-gitlab-runner
  annotations:
    prometheus.io/port: "9252"
    prometheus.io/scrape: "true"
  labels:
    app: gitlab-gitlab-runner
    chart: gitlab-runner-0.15.0
    heritage: Helm
    release: gitlab
spec:
  containers:
  - command:
    - /bin/bash
    - /scripts/entrypoint
    image: gitlab/gitlab-runner:alpine-v12.9.0
    imagePullPolicy: IfNotPresent
    livenessProbe:
      exec:
        command:
        - /bin/bash
        - /scripts/check-live
      failureThreshold: 3
      initialDelaySeconds: 60
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    name: gitlab-gitlab-runner
    ports:
    - containerPort: 9252
      name: metrics
      protocol: TCP
    readinessProbe:
      exec:
        command:
        - /usr/bin/pgrep
        - gitlab.*runner
      failureThreshold: 3
      initialDelaySeconds: 10
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /secrets
      name: runner-secrets
    - mountPath: /home/gitlab-runner/.gitlab-runner
      name: etc-gitlab-runner
    - mountPath: /scripts
      name: scripts
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: gitlab-gitlab-runner-token-9zql5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kx-as-code.local
  priority: 0
  restartPolicy: Always
  hostAliases:
  - ip: "192.168.228.238"
    hostnames:
    - "gitlab.kx-as-code.local"
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 65533
    runAsUser: 100
  serviceAccount: gitlab-gitlab-runner
  serviceAccountName: gitlab-gitlab-runner
  terminationGracePeriodSeconds: 3600
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir:
      medium: Memory
    name: runner-secrets
  - emptyDir:
      medium: Memory
    name: etc-gitlab-runner
  - name: init-runner-secrets
    projected:
      defaultMode: 420
      sources:
      - secret:
          items:
          - key: runner-registration-token
            path: runner-registration-token
          - key: runner-token
            path: runner-token
          name: gitlab-gitlab-runner-secret
  - configMap:
      defaultMode: 420
      name: gitlab-gitlab-runner
    name: scripts
  - name: gitlab-gitlab-runner-token-9zql5
    secret:
      defaultMode: 420
      secretName: gitlab-gitlab-runner-token-9zql5
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-04-05T16:27:26Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-04-05T16:28:15Z"
    message: 'containers with unready status: [gitlab-gitlab-runner]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-04-05T16:28:15Z"
    message: 'containers with unready status: [gitlab-gitlab-runner]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-04-05T15:47:17Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://c913a242922e062abf235b96eced09d580a54023aa91ea4c26e2311d8724859b
    image: gitlab/gitlab-runner:alpine-v12.9.0
    imageID: docker-pullable://gitlab/gitlab-runner@sha256:d9b6b40e696cf4f4f443f97920f399cef5664cdf14ec18b8761ba5ac36d7b092
    lastState:
      terminated:
        containerID: docker://c913a242922e062abf235b96eced09d580a54023aa91ea4c26e2311d8724859b
        exitCode: 1
        finishedAt: "2020-04-05T17:56:39Z"
        reason: Error
        startedAt: "2020-04-05T17:54:13Z"
    name: gitlab-gitlab-runner
    ready: false
    restartCount: 23
    started: false
    state:
      waiting:
        message: back-off 5m0s restarting failed container=gitlab-gitlab-runner pod=gitlab-gitlab-runner-7bb775c454-24qtf_gitlab(4d630cc3-80aa-4389-8884-2f2d29835d54)
        reason: CrashLoopBackOff
  hostIP: 10.211.55.12
  initContainerStatuses:
  - containerID: docker://d6ae121e5ef1f3c8ef8f083df38917597781b4777c3426aa9c303aadc5c3c7c9
    image: gitlab/gitlab-runner:alpine-v12.9.0
    imageID: docker-pullable://gitlab/gitlab-runner@sha256:d9b6b40e696cf4f4f443f97920f399cef5664cdf14ec18b8761ba5ac36d7b092
    lastState: {}
    name: configure
    ready: true
    restartCount: 1
    state:
      terminated:
        containerID: docker://d6ae121e5ef1f3c8ef8f083df38917597781b4777c3426aa9c303aadc5c3c7c9
        exitCode: 0
        finishedAt: "2020-04-05T16:27:25Z"
        reason: Completed
        startedAt: "2020-04-05T16:27:25Z"
  phase: Running
  podIP: 192.168.228.235
  podIPs:
  - ip: 192.168.228.235
  qosClass: BestEffort
  startTime: "2020-04-05T15:47:17Z"
