play-pit/CICD/Gitlab/GitLab-CE/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab.kx-as-code.local
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8181
      protocol: TCP
  selector:
    app: "gitlab-unicorn"
