play-pit/CICD/Gitlab/GitLab-CE/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ce-webservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - gitlab.kx-as-code.local
  rules:
  - host: gitlab.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: gitlab-ce-webservice
           servicePort: 8181
